# phenoimager2mc

./: Dockerfile  README.md  environment.yml  extract_metadata.sh  pyproject.toml
.github/workflows/: docker-publish.yml  python-publish.yml
notebooks/: SignalStar_concatenate_tiles.ipynb  SignalStar_extract_metadata.ipynb  palom.ipynb
scripts/: phenoimager2mc.py
src/phenoimager2mc/: main.py
